--- a/practice.html
+++ b/practice.html
@@ -85,7 +85,7 @@
                 <figure>
                     <img src="./nature.jpg" alt="nature">
                     <figcaption>
-                        <a href="#">நடக்கும் தசை <br>உங்களை உச்சத்துக்கு<br> கொண்டு போகிறதா?</a>
+                        <a href="nature.html">நடக்கும் தசை <br>உங்களை உச்சத்துக்கு<br> கொண்டு போகிறதா?</a>
                     </figcaption>
                 </figure>
             </article>
@@ -93,7 +93,7 @@
                 <figure>
                     <img src="./karma.jpg" alt="karma">
                     <figcaption>
-                        <a href="#" >உங்கள் கர்மா<br> உங்களை எவ்வாறு<br> வழி நடத்துகிறது?<br>
+                        <a href="karma.html" >உங்கள் கர்மா<br> உங்களை எவ்வாறு<br> வழி நடத்துகிறது?<br>
                     </a>
                     </figcaption>   
                 </figure>
@@ -102,7 +102,7 @@
                 <figure>
                     <img src="./thasa.jpg" alt="thasa">
                     <figcaption>
-                        <a href="#">வாழ்வியல் சம்பவங்கள்<br> துல்லியமாக காட்டும்<br> தசா புத்தி பலன்கள் </a>
+                        <a href="thasa.html">வாழ்வியல் சம்பவங்கள்<br> துல்லியமாக காட்டும்<br> தசா புத்தி பலன்கள் </a>
                     </figcaption>
                 </figure>
             </article>
